<resources>
    <string name="app_name">FAC</string>
    <string name="name">username</string>
    <string name="email">email</string>
    <string name="whatsApp">whatsApp number</string>
    <string name="id">id</string>
    <string name="signUp">sign up</string>
    <string name="errorusername">enter username</string>
    <string name="erroremail">enter email</string>
    <string name="errorwhatsapp">enter whatsApp</string>
    <string name="erroruid">enter uid pubg</string>
    <string name="errorwhatsappplus">enter whatsapp number begin +</string>
    <string name="erroruidlength">the number is wrong</string>
    <string name="errorconnection">error connection</string>
    <string name="profile">My Profile</string>
    <string name="true_answer">T ans.</string>
    <string name="false_answer">F ans.</string>
    <string name="percentage">Rate</string>
    <string name="game">Game</string>
    <string name="flage">flags</string>
    <string name="capitale">capitals</string>
    <string name="require">Require</string>
    <string name="afghanistan">afghanistan</string>
    <string name="albania">albania</string>
    <string name="algeria">algeria</string>
    <string name="andorra">andorra</string>
    <string name="angola">angola</string>
    <string name="anguilla">anguilla</string>
    <string name="argentina">argentina</string>
    <string name="armenia">armenia</string>
    <string name="aruba">aruba</string>
    <string name="australia">australia</string>
    <string name="austria">austria</string>
    <string name="azerbaijan">azerbaijan</string>
    <string name="bahamas">bahamas</string>
    <string name="bahrain">bahrain</string>
    <string name="bangladesh">bangladesh</string>
    <string name="barbados">barbados</string>
    <string name="belarus">belarus</string>
    <string name="belgium">belgium</string>
    <string name="belize">belize</string>
    <string name="benin">benin</string>
    <string name="bermuda">bermuda</string>
    <string name="bhutan">bhutan</string>
    <string name="bolivia">bolivia</string>
    <string name="botswana">botswana</string>
    <string name="brazil">brazil</string>
    <string name="brunei">brunei</string>
    <string name="bulgaria">bulgaria</string>
    <string name="burkina_faso">burkina_faso</string>
    <string name="burundi">burundi</string>
    <string name="cambodia">cambodia</string>
    <string name="cameroon">cameroon</string>
    <string name="canada">canada</string>
    <string name="canary_islands">canary_islands</string>
    <string name="cape_verde">cape_verde</string>
    <string name="cayman_islands">cayman_islands</string>
    <string name="chad">chad</string>
    <string name="chile">chile</string>
    <string name="china">china</string>
    <string name="colombia">colombia</string>
    <string name="comoros">comoros</string>
    <string name="costa_rica">costa_rica</string>
    <string name="croatia">croatia</string>
    <string name="cuba">cuba</string>
    <string name="curacao">curacao</string>
    <string name="cyprus">cyprus</string>
    <string name="czech_republic">czech_republic</string>
    <string name="denmark">denmark</string>
    <string name="djibouti">djibouti</string>
    <string name="dominica">dominica</string>
    <string name="dominican_republic">dominican_republic</string>
    <string name="east_timor">east_timor</string>
    <string name="ecuador">ecuador</string>
    <string name="egypt">egypt</string>
    <string name="el_salvador">el_salvador</string>
    <string name="england">england</string>
    <string name="equatorial_guinea">equatorial_guinea</string>
    <string name="eritrea">eritrea</string>
    <string name="estonia">estonia</string>
    <string name="ethiopia">ethiopia</string>
    <string name="european_union">european_union</string>
    <string name="finland">finland</string>
    <string name="france">france</string>
    <string name="french_polynesia">french_polynesia</string>
    <string name="gabon">gabon</string>
    <string name="gambia">gambia</string>
    <string name="georgia">georgia</string>
    <string name="germany">germany</string>
    <string name="ghana">ghana</string>
    <string name="gibraltar">gibraltar</string>
    <string name="greece">greece</string>
    <string name="greenland">greenland</string>
    <string name="grenada">grenada</string>
    <string name="guatemala">guatemala</string>
    <string name="guinea">guinea</string>
    <string name="guinea_bissau">guinea_bissau</string>
    <string name="haiti">haiti</string>
    <string name="hawaii">hawaii</string>
    <string name="honduras">honduras</string>
    <string name="hong_kong">hong_kong</string>
    <string name="hungary">hungary</string>
    <string name="iceland">iceland</string>
    <string name="india">india</string>
    <string name="indonesia">indonesia</string>
    <string name="iran">iran</string>
    <string name="iraq">iraq</string>
    <string name="ireland">ireland</string>
    <string name="italy">italy</string>
    <string name="ivory_coast">ivory_coast</string>
    <string name="jamaica">jamaica</string>
    <string name="japan">japan</string>
    <string name="jersey">jersey</string>
    <string name="jordan">jordan</string>
    <string name="kazakhstan">kazakhstan</string>
    <string name="kenya">kenya</string>
    <string name="kiribati">kiribati</string>
    <string name="kosovo">kosovo</string>
    <string name="kwait">kwait</string>
    <string name="kyrgyzstan">kyrgyzstan</string>
    <string name="laos">laos</string>
    <string name="latvia">latvia</string>
    <string name="lebanon">lebanon</string>
    <string name="lesotho">lesotho</string>
    <string name="liberia">liberia</string>
    <string name="libya">libya</string>
    <string name="liechtenstein">liechtenstein</string>
    <string name="lithuania">lithuania</string>
    <string name="luxembourg">luxembourg</string>
    <string name="macao">macao</string>
    <string name="madagascar">madagascar</string>
    <string name="malawi">malawi</string>
    <string name="maldives">maldives</string>
    <string name="mali">mali</string>
    <string name="malta">malta</string>
    <string name="marshall_island">marshall_island</string>
    <string name="mauritania">mauritania</string>
    <string name="mauritius">mauritius</string>
    <string name="mexico">mexico</string>
    <string name="moldova">moldova</string>
    <string name="monaco">monaco</string>
    <string name="mongolia">mongolia</string>
    <string name="montenegro">montenegro</string>
    <string name="morocco">morocco</string>
    <string name="mozambique">mozambique</string>
    <string name="myanmar">myanmar</string>
    <string name="namibia">namibia</string>
    <string name="nato">nato</string>
    <string name="nauru">nauru</string>
    <string name="nepal">nepal</string>
    <string name="netherlands">netherlands</string>
    <string name="new_zealand">new_zealand</string>
    <string name="nicaragua">nicaragua</string>
    <string name="niger">niger</string>
    <string name="nigeria">nigeria</string>
    <string name="north_korea">north_korea</string>
    <string name="northern_cyprus">northern_cyprus</string>
    <string name="norway">norway</string>
    <string name="oman">oman</string>
    <string name="pakistan">pakistan</string>
    <string name="palau">palau</string>
    <string name="palestine">palestine</string>
    <string name="panama">panama</string>
    <string name="papua_new_guinea">papua_new_guinea</string>
    <string name="paraguay">paraguay</string>
    <string name="peru">peru</string>
    <string name="philippines">philippines</string>
    <string name="poland">poland</string>
    <string name="portugal">portugal</string>
    <string name="puerto_rico">puerto_rico</string>
    <string name="qatar">qatar</string>
    <string name="republic_of_macedonia">republic_of_macedonia</string>
    <string name="romania">romania</string>
    <string name="russia">russia</string>
    <string name="rwanda">rwanda</string>
    <string name="samoa">samoa</string>
    <string name="san_marino">san_marino</string>
    <string name="saudi_arabia">saudi_arabia</string>
    <string name="scotland">scotland</string>
    <string name="senegal">senegal</string>
    <string name="serbia">serbia</string>
    <string name="seychelles">seychelles</string>
    <string name="sierra_leone">sierra_leone</string>
    <string name="singapore">singapore</string>
    <string name="slovakia">slovakia</string>
    <string name="slovenia">slovenia</string>
    <string name="solomon_islands">solomon_islands</string>
    <string name="somalia">somalia</string>
    <string name="somaliland">somaliland</string>
    <string name="south_africa">south_africa</string>
    <string name="south_korea">south_korea</string>
    <string name="south_sudan">south_sudan</string>
    <string name="spain">spain</string>
    <string name="sri_lanka">sri_lanka</string>
    <string name="sudan">sudan</string>
    <string name="suriname">suriname</string>
    <string name="swaziland">swaziland</string>
    <string name="sweden">sweden</string>
    <string name="switzerland">switzerland</string>
    <string name="syria">syria</string>
    <string name="taiwan">taiwan</string>
    <string name="tajikistan">tajikistan</string>
    <string name="tanzania">tanzania</string>
    <string name="thailand">thailand</string>
    <string name="togo">togo</string>
    <string name="tunisia">tunisia</string>
    <string name="turkey">turkey</string>
    <string name="turkmenistan">turkmenistan</string>
    <string name="uganda">uganda</string>
    <string name="ukraine">ukraine</string>
    <string name="united_arab_emirates">united_arab_emirates</string>
    <string name="united_kingdom">united_kingdom</string>
    <string name="united_nations">united_nations</string>
    <string name="united_states">united_states</string>
    <string name="uruguay">uruguay</string>
    <string name="uzbekistan">uzbekistan</string>
    <string name="vanuatu">vanuatu</string>
    <string name="vatican_city">vatican_city</string>
    <string name="venezuela">venezuela</string>
    <string name="vietnam">vietnam</string>
    <string name="wales">wales</string>
    <string name="yemen">yemen</string>
    <string name="zambia">zambia</string>
    <string name="zimbabwe">zimbabwe</string>
    <string name="reset">reset</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="dialog_message">Your request has been sent. You will be notified of the success of the process within 24 hours</string>
    <string name="dialog_title">Order</string>
    <string name="ok">ok</string>
    <string name="no_coins">There are not enough coins left</string>
</resources>