<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <com.google.android.material.circularreveal.cardview.CircularRevealCardView
        android:id="@+id/back_button"
        android:layout_width="50dp"
        android:layout_height="40dp"
        android:layout_marginLeft="10dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="0dp"
        android:elevation="0dp"
        android:checkable="true"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView">

        <ImageView
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:layout_gravity="center"
            android:src="@drawable/back"
            app:tint="#676767" />
    </com.google.android.material.circularreveal.cardview.CircularRevealCardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bruno_ace_regular"
        android:text="@string/profile"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@+id/profile_image"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="60dp"
        android:elevation="3dp"
        android:src="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bruno_ace_regular"
        android:text="Username"
        android:layout_marginTop="20dp"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/profile_image"
        app:layout_constraintStart_toStartOf="@+id/profile_image"
        app:layout_constraintTop_toBottomOf="@+id/profile_image" />

    <TextView
        android:id="@+id/text_id_pubg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/bruno_ace_regular"
        android:text="1234569874"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/text_username"
        app:layout_constraintStart_toStartOf="@+id/text_username"
        app:layout_constraintTop_toBottomOf="@+id/text_username" />

    <LinearLayout
        android:id="@+id/liner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@+id/text_id_pubg"
        tools:layout_editor_absoluteX="20dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/bruno_ace_regular"
            android:gravity="center"
            android:text="@string/percentage"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/bruno_ace_regular"
            android:gravity="center"
            android:text="@string/true_answer"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/bruno_ace_regular"
            android:gravity="center"
            android:text="@string/false_answer"
            android:textSize="12sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/bruno_ace_regular"
            android:gravity="center"
            android:text="@string/reset"
            android:textSize="12sp" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/liner2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@+id/liner1">

        <TextView
            android:id="@+id/text_rate_f"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:fontFamily="@font/bruno_ace_regular"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/myblack"
            android:elevation="2dp"
            android:textSize="15sp"
            android:text="0%" />
        <TextView
            android:id="@+id/text_true"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:fontFamily="@font/bruno_ace_regular"
            android:layout_height="wrap_content"
            android:textColor="@color/myblack"
            android:gravity="center"
            android:textSize="15sp"
            android:text="0" />
        <TextView
            android:id="@+id/text_false"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bruno_ace_regular"
            android:gravity="center"
            android:textColor="@color/myblack"
            android:textSize="15sp"
            android:text="0" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/reset_button"
            android:layout_width="90dp"
            android:layout_height="35dp"
            app:cornerRadius="20dp"
            android:textSize="9sp"
            android:text="@string/reset" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/liner3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:visibility="gone"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@+id/liner2">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="12sp"
            android:fontFamily="@font/bruno_ace_regular"
            android:text="@string/percentage" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bruno_ace_regular"
            android:textSize="12sp"
            android:gravity="center"
            android:text="@string/true_answer" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bruno_ace_regular"
            android:textSize="12sp"
            android:gravity="center"
            android:text="@string/false_answer" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bruno_ace_regular"
            android:textSize="12sp"
            android:gravity="center"
            android:text="@string/game" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/liner4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:visibility="gone"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@+id/liner3">

        <TextView
            android:id="@+id/text_rate_c"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="15sp"
            android:fontFamily="@font/bruno_ace_regular"
            android:textColor="@color/myblack"
            android:text="92%" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:fontFamily="@font/bruno_ace_regular"
            android:textSize="15sp"
            android:textColor="@color/myblack"
            android:text="46" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/myblack"
            android:fontFamily="@font/bruno_ace_regular"
            android:textSize="15sp"
            android:text="4" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/myblack"
            android:textSize="15sp"
            android:text="@string/capitale" />
    </LinearLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/liner2">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/materialButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:visibility="gone"
                android:text="@string/require"
                app:cornerRadius="20dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <TextView
                    android:id="@+id/text33"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="7dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/bruno_ace_regular"
                    android:text="0"
                    android:textColor="#D8A200"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="7dp"
                    android:layout_weight="1"
                    android:src="@drawable/coins" />
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="15dp"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-8008323357438881/9367900466"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>